--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,3 +1,12 @@
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    /* iPhone, Android rules here */
+    :root {
+        --gap: 18px;
+        --content-gap: 16px;
+        --nav-width: ;
+    }
+}
+
 .post-content img[src*="#left"] {
     margin: 3%;
     float: left;
@@ -26,8 +35,3 @@
     --code-bg: rgb(245, 245, 245);
     --border:rgb(238, 238, 238)
 }
-
-p {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-  }
