--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,12 +1,3 @@
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    /* iPhone, Android rules here */
-    :root {
-        --gap: 18px;
-        --content-gap: 16px;
-        --nav-width: ;
-    }
-}
-
 .post-content img[src*="#left"] {
     margin: 3%;
     float: left;
@@ -34,4 +25,19 @@
     --code-block-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border:rgb(238, 238, 238)
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    /* iPhone, Android rules here */
+    :root {
+        --gap: 18px;
+        --content-gap: 16px;
+        --nav-width: ;
+    }
+    .logo a {
+        font-size: 18px;
+    }
+    #menu a {
+        font-size: 14px;
+    }
 }
